finished checkout (readded hide overflow) 1error:bottom bg on mobile is buggeed

--- a/public_html/css/checkout.css
+++ b/public_html/css/checkout.css
@@ -54,7 +54,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  /* overflow-x: hidden; Remove the bottom scrollbar */
+ overflow-x: hidden;
 
   height: 2000px;
 }
@@ -402,10 +402,13 @@ body {
 }
 
 .COcontainer {
-  background-color: #f2f2f2;
+  background-color: rgb(0, 40, 87);
   padding: 5px 20px 15px 20px;
   border: 1px solid lightgrey;
-  border-radius: 3px;
+  border-radius: 15px;
+  color: white;
+  box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.548);
+  padding: 20px;
 }
 
 input[type="text"] {
